--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Node js Q4 2022 project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start:dev": "ts-node src/index.ts",
-    "start:prod": "tsc & node dist/index.js",
+    "start:dev": "SET STATUS=development && ts-node-esm src/index.ts  ",
+    "start:prod": "SET STATUS=production && tsc & node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
