--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "SET STATUS=development && nodemon --legacy-watch --ignore 'src/*.spec.ts' --exec ts-node-esm src/index.ts  ",
     "start:prod": "SET STATUS=production && tsc & node dist/index.js",
     "start:multi": "SET STATUS=development && nodemon --legacy-watch --ignore 'src/*.spec.ts' --exec ts-node-esm src/indexMulti.ts  ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
   },
   "homepage": "https://github.com/YuliyaShu/CRUD-API#readme",
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
+    "@types/jest": "^29.2.4",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -28,7 +32,10 @@
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
