--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:prod": "SET STATUS=production && tsc & node dist/index.js",
     "start:multi": "SET STATUS=development && nodemon --legacy-watch --ignore 'src/*.spec.ts' --exec ts-node-esm src/indexMulti.ts  ",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "npx eslint"
   },
   "repository": {
     "type": "git",
